fix: enable github pages permissions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   deploy:
+    permissions: write-all
     name: Build and deploy GH Pages
     needs:
       - release
