--- a/deno.json
+++ b/deno.json
@@ -41,7 +41,7 @@
   },
   "tasks": {
     "update-deps": "deno run --allow-run --allow-read --allow-write --allow-net --quiet 'https://deno.land/x/nudd@v0.2.9/cli.ts' update plugins.ts deno.json",
-    "commit": "deno run --allow-env --allow-sys --allow-read --allow-run --allow-write npm:@tmcb/conventional-commit",
+    "commit": "deno run --allow-env --allow-sys --allow-read --allow-run --allow-write npm:@tmcb/conventional-commit@1",
     "check": "deno check .",
     "lint": "deno lint .",
     "lint:write": "deno task lint -- --fix",
